--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>developを更新</h1>
+    <h1>feature/merge-base-branch-3</h1>
   </body>
 </html>
